| Bug #46069 | Data node crashes during normal operation at Dbacc::readTablePk | ||
|---|---|---|---|
| Submitted: | 9 Jul 2009 1:12 | Modified: | 10 Aug 2009 10:32 |
| Reporter: | Mikiya Okuno | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[9 Jul 2009 1:12]
Mikiya Okuno
[7 Aug 2009 8:02]
Jonas Oreland
proposed patch
Attachment: bug46069.patch (text/x-patch), 1.03 KiB.
[7 Aug 2009 11:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/80348 2961 Jonas Oreland 2009-08-07 ndb - bug#46069 Fix crash in ACC caused by assertion fire-ing due to TUX LOCK_REQ did not set OP_COMMIT_DELETE_CHECK during setup
[7 Aug 2009 12:47]
Jonas Oreland
DOCS: Problem was when combining index-scan+delete with primary key delete The index-scan delete failed set properly initialize a flag, causing a rare assertion. The missing initialization of the flag did how-ever not have any bad effect (except the rare assertion :-) pushed to 6.2.19, 6.3.26 and 7.0.7
[10 Aug 2009 10:32]
Jon Stephens
Documented bugfix in the NDB 6.2.19, 6.3.26, and 7.0.7 changelogs as follows:
When combining an index scan and a delete with a primary key delete, the
index scan and delete failed to initialize a flag properly. This could in
rare circumstances cause a data node to crash.
