ndb - bug#46069   Fix crash in ACC caused by assertion fire-ing due to TUX LOCK_REQ     did not set OP_COMMIT_DELETE_CHECK during setup